Fix overflow on dashboard (price & amount)

--- a/backend/public/static/css/add_chocolate.css
+++ b/backend/public/static/css/add_chocolate.css
@@ -22,7 +22,6 @@ form[action='/api/chocolates/add'] {
 
 .form_input {
   font-family: 'Courier New', Courier, monospace;
-  min-width: 450px;
 }
 
 .form_input[type='text'], .form_input[type='number'], textarea.form_input {
